--- a/style/style.scss
+++ b/style/style.scss
@@ -24,93 +24,112 @@ body {
     background-color: $primary-color;
     color: #fff ;
     clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 65%);
-    text-align: center;
+    
+    .container {
+        margin: 0 auto;
+        
 
-    p {
-        padding: 1em;
-        font-size: 1.2rem;
-    }
+        .contentText {
 
-    h1 {
-        font-size: 2.8rem;
-    }
+            text-align: center;
 
-    .slogan {
-        font-size: 1em;
-        padding: 5vh;
-    }
-
-    .navbar {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: center;
-
-        .navlist {
-            display: flex;
-            list-style: none;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-
-            
-            .navButtons {
-                margin: 0px 30px;
-                padding: 2.5vh 1vw;
-                background-color: #fff;
-                text-align: center;
-                border-radius: 5px;
-                width: 11vw;
-                height: 7vh;
-                transition: ease-in-out 300ms;
-                
-                &:hover {
-                    box-shadow: none;
-                    cursor: pointer;
-                }
-
-                &:hover a {
-                    border-bottom: 1px solid $secondary-color;
-                }               
-
-                a {
-                    text-decoration: none;
-                    color: $secondary-color;
-                    transition: ease-in-out 300ms;
-                }
-
+            p {
+                padding: 1em;
+                font-size: 1.2rem;
+            }
+        
+            h1 {
+                font-size: 2.5rem;
+            }
+        
+            .slogan {
+                font-size: 0.875em;
+                padding: 5vh;
             }
 
         }
-    }
-
-    @media (max-width: 1024px) {
-
-        height: 40em;
-        margin: 0 auto;
 
         .navbar {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+            align-items: center;
+    
             .navlist {
-
-                display: grid;
-                grid-template-columns: repeat(2, 2fr);
-                gap: 20px 10px;
+                display: flex;
                 list-style: none;
+                flex-direction: row;
+                flex-wrap: wrap;
                 justify-content: center;
-
+                align-items: center;
+    
+                
                 .navButtons {
-                    margin: 0px 10px;
+                    margin: 0px 30px;
                     padding: 2.5vh 1vw;
                     background-color: #fff;
                     text-align: center;
                     border-radius: 5px;
-                    width: auto;
+                    width: 11vw;
+                    height: 7vh;
+                    transition: ease-in-out 300ms;
+                    
+                    &:hover {
+                        box-shadow: none;
+                        cursor: pointer;
+                    }
+    
+                    &:hover a {
+                        border-bottom: 1px solid $secondary-color;
+                    }               
+    
+                    a {
+                        text-decoration: none;
+                        color: $secondary-color;
+                        transition: ease-in-out 300ms;
+                    }
+    
                 }
-
+    
             }
         }
-        
+
+    }
+    
+
+    
+
+    @media (max-width: 768px) {
+
+        height: 40em;
+        margin: 0 auto;
+        clip-path: polygon(0% 0, 100% 0, 100% 85%, 0% 65%);
+
+        .container {
+
+            .navbar {
+
+                .navlist {
+    
+                    display: grid;
+                    grid-template-columns: repeat(2, 2fr);
+                    gap: 20px 10px;
+                    list-style: none;
+                    justify-content: center;
+    
+                    .navButtons {
+                        margin: 0px 0.4em;
+                        padding: 1.2em 6vw;
+                        text-align: center;
+                        border-radius: 5px;
+                        width: auto;
+                    }
+    
+                }
+            }
+
+        }
+ 
     }
 
 }
@@ -217,17 +236,24 @@ body {
 
                         input {
 
-                            width: 90vw;
-                            height: 7vh
+                            width: 85vw;
+                            height: 6vh
                         }
 
                     } 
                 }
 
-                button {
-                    width: 90vw;
-                    height: 10vh;
+                div {
+                    display: flex;
+                    justify-content: center;
+
+                    button {
+                        width: 70vw;
+                        height: 5vh;
+                    }
+
                 }
+                    
             }
 
         }
@@ -239,6 +265,7 @@ body {
 
 .specialSelection {
     position: relative;
+    
     
     .container {
         margin-top: 10em;
@@ -275,59 +302,79 @@ body {
 
             display: grid;
             grid-template-columns: repeat(4, 1fr);
+            justify-content: center;
             width: 19vw;
             height: auto;
+            margin: 0 auto;
 
             .box {
                 display: flex;
-                padding: 40px 40px;
+                padding: 2.5em 4em;
                 flex-direction: column;
                 align-content: center;
                 justify-content: center;
                 color: $secondary-color;
-                
-    
-                img {
-                    width: 150px;
-                }
-    
-                h4 {
-                    margin: 0.5em 0;
-                    font-size: 14px;
-                    font-weight: 100;
+
+                .img {
+                    width: 15em;
+                    height: 12em;
+
+                    .fa-sample {
+                        color: #707070;
+                    }
                     
+
+                    img {
+                        width: 12em;
+                        padding: 1em;
+                    }
+
                 }
-    
-                p {
-                    font-size: 12px;
-                    margin-top: 0.5em;
-    
-                    &:nth-child(4) {
-                        font-size: 16px;
-                        font-weight: bold;
+
+                .productText {
+
+                    padding: 0.5em;
+
+                    h4 {
+                        margin: 0.5em 0;
+                        font-size: 14px;
+                        font-weight: 100;
+                        
+                        
+                    }
+        
+                    p {
+                        font-size: 12px;
+                        margin-top: 0.5em;
+        
+                        &:nth-child(4) {
+                            font-size: 16px;
+                            font-weight: bold;
+                            margin-top: 1em;
+                        }
+                    }
+                       
+                    button {
                         margin-top: 1em;
-                    }
-                }
-                   
-                button {
-                    margin-top: 1em;
-                    width: 12em;
-                    height: 4vh;
-                    color: $secondary-color;
-                    font-size: 16px;
-                    cursor: pointer;
-                    background-color: #fff;
-                    border: solid 1px $primary-color;
-                    transition: ease-in-out 300ms;
-            
-                    &:hover {
-                        background-color: $primary-color;
-                        color: #fff;
-                    }
+                        width: 12em;
+                        height: 4vh;
+                        color: $secondary-color;
+                        font-size: 16px;
+                        cursor: pointer;
+                        background-color: #fff;
+                        border: solid 1px $primary-color;
+                        transition: ease-in-out 300ms;
                 
+                        &:hover {
+                            background-color: $primary-color;
+                            color: #fff;
+                        }
+                    
+                    }
+
                 }
-            }
     
+            }
     
         }
 
@@ -368,11 +415,149 @@ body {
         }
     }
 
+    @media (max-width: 1024px) {
+        
+        .container {
+            #boxes {
+
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                width: auto;
+                height: auto;
+
+                
+            }
+
+        }
+       
+        
+    }
+
+    @media (max-width: 768px) {
+
+        .container {
+
+            #boxes {
+
+                display: grid;
+                grid-template-columns: repeat(1, 1fr);
+                width: auto;
+                height: auto;
+
+                .box {
+                    display: flex;
+                    padding: 0;
+                    flex-direction: row;
+                    align-content: center;
+                    justify-content: center;
+                    color: $secondary-color;
+
+                    .productText {
+                        p {
+                            &:nth-child(2) {
+                                display: none;
+                            }
+
+                            &:nth-child(4) {
+                                font-size: 16px;
+                                font-weight: bold;
+                                margin-top: 0;
+                            }
+                        }
+                    }
+                }
+            }
+
+            #btnNewPage {
+                
+                width: 70vw;
+                height: 7vh;
+        
+            }
+
+        }
+        
+    }
+
+    @media (max-width: 600px) {
+
+        .container {
+            
+            .special {
+
+                h3 {
+                    &:before, &:after {
+
+                        display: none;
+
+                    }
+                }
+
+
+            }
+            
+            #boxes {
+
+                display: grid;
+                grid-template-columns: repeat(1, 1fr);
+                width: auto;
+                height: auto;
+
+                .box {
+
+                    .img {
+                        img {
+                            width: 35vw;
+                            padding: 0;
+                        }
+                    }
+                }
+            }
+
+        }
+        
+    }
+
+    @media (max-width: 425px) {
+
+        .container {
+            #boxes {
+                margin-top: 5em;
+                display: grid;
+                grid-template-columns: repeat(1, 1fr);
+                width: auto;
+                height: auto;
+
+                .box {
+
+                    display: flex;
+                    padding: 0;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    color: $secondary-color;
+
+                    .img {
+                        img {
+                            width: 40vw;
+                            padding: 0;
+                        }
+                    }
+                }
+            }
+
+        }
+
+
+        
+    }
+
 }
 
 .news {
     text-align: center;
     margin-top: 25vh;
+    
     
 
     .share {
@@ -472,6 +657,16 @@ body {
     }
 
     @media (max-width: 1024px) {
+
+        .share {
+            h3 {
+                &:before, &:after {
+                    display: none;
+                }
+            }
+        }   
+       
+       
         .form2 {
 
             position: relative;
@@ -509,7 +704,7 @@ body {
             }
     
             button {
-                width: 20vw;
+                width: 70vw;
                 height: 7vh;
                 color: $secondary-color;
                 font-size: 16px;
