--- a/style/style.css
+++ b/style/style.css
@@ -214,7 +214,7 @@ body .error {
   justify-content: center;
   width: 19vw;
   height: auto;
-  margin: 0 auto;
+  margin: 5em auto;
 }
 .specialSelection .container #boxes .box {
   display: flex;
@@ -227,9 +227,6 @@ body .error {
 .specialSelection .container #boxes .box .img {
   width: 15em;
   height: 12em;
-}
-.specialSelection .container #boxes .box .img .fa-sample {
-  color: #707070;
 }
 .specialSelection .container #boxes .box .img img {
   width: 12em;
@@ -330,6 +327,7 @@ body .error {
   .specialSelection .container #btnNewPage {
     width: 70vw;
     height: 7vh;
+    margin-top: 2em;
   }
 }
 @media (max-width: 600px) {
@@ -357,7 +355,7 @@ body .error {
   }
   .specialSelection .container #boxes .box {
     display: flex;
-    padding: 0;
+    padding: 2em 1em;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -366,6 +364,13 @@ body .error {
   .specialSelection .container #boxes .box .img img {
     width: 40vw;
     padding: 0;
+  }
+  .specialSelection .container #newPage {
+    margin-top: 5em;
+  }
+  .specialSelection .container #newPage #btnNewPage {
+    width: 70vw;
+    height: 7vh;
   }
 }
 
