--- a/style/style.css
+++ b/style/style.css
@@ -77,8 +77,8 @@ body .error {
   .header {
     height: 40em;
     margin: 0 auto;
-    -webkit-clip-path: polygon(0% 0, 100% 0, 100% 85%, 0% 65%);
-            clip-path: polygon(0% 0, 100% 0, 100% 85%, 0% 65%);
+    -webkit-clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 85%);
+            clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 85%);
   }
   .header .container .navbar .navlist {
     display: grid;
@@ -189,24 +189,19 @@ body .error {
   margin-top: 10em;
 }
 .specialSelection .container .special {
+  border-top: 1px solid #707070;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  display: block;
   text-align: center;
+  width: 70vw;
+  margin: 0 auto;
 }
-.specialSelection .container .special h3 {
+.specialSelection .container .special legend {
+  padding: 5px 10px;
   font-size: 18px;
   color: #888888;
-}
-.specialSelection .container .special h3:before, .specialSelection .container .special h3:after {
-  content: " ";
-  position: absolute;
-  width: 25%;
-  border-top: 1px solid #888888;
-  margin-top: 1vh;
-}
-.specialSelection .container .special h3:before {
-  margin-left: -355px;
-}
-.specialSelection .container .special h3:after {
-  margin-left: 15px;
 }
 .specialSelection .container #boxes {
   display: grid;
@@ -313,8 +308,6 @@ body .error {
     padding: 0;
     flex-direction: row;
     align-content: center;
-    justify-content: center;
-    color: #888888;
   }
   .specialSelection .container #boxes .box .productText p:nth-child(2) {
     display: none;
@@ -331,8 +324,8 @@ body .error {
   }
 }
 @media (max-width: 600px) {
-  .specialSelection .container .special h3:before, .specialSelection .container .special h3:after {
-    display: none;
+  .specialSelection .container .special {
+    width: 100vw;
   }
   .specialSelection .container #boxes {
     display: grid;
@@ -358,8 +351,6 @@ body .error {
     padding: 2em 1em;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    color: #888888;
   }
   .specialSelection .container #boxes .box .img img {
     width: 40vw;
@@ -379,25 +370,18 @@ body .error {
   margin-top: 25vh;
 }
 .news .share {
+  border-top: 1px solid #707070;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  display: block;
   text-align: center;
-  margin-bottom: 6vh;
+  width: 70vw;
+  margin: 6vh auto;
 }
-.news .share h3 {
+.news .share legend {
   font-size: 18px;
   color: #888888;
-}
-.news .share h3:before, .news .share h3:after {
-  content: " ";
-  position: absolute;
-  width: 25%;
-  border-top: 1px solid #888888;
-  margin-top: 1vh;
-}
-.news .share h3:before {
-  margin-left: -345px;
-}
-.news .share h3:after {
-  margin-left: 5px;
 }
 .news p {
   margin-bottom: 4vh;
@@ -454,9 +438,9 @@ body .error {
   background-color: #707070;
   color: #fff;
 }
-@media (max-width: 1024px) {
-  .news .share h3:before, .news .share h3:after {
-    display: none;
+@media (max-width: 600px) {
+  .news .share {
+    width: 100vw;
   }
   .news .form2 {
     position: relative;
@@ -472,38 +456,19 @@ body .error {
   .news .form2 #formShare div {
     display: flex;
     flex-direction: row;
-    margin: 1.5em 0;
   }
   .news .form2 #formShare div label {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    font-size: 12px;
-    color: #888888;
   }
   .news .form2 #formShare div label input {
-    width: 80vw;
-    height: 4.5vh;
-    border: solid 1px #707070;
-    margin-top: 2vh;
+    width: 85vw;
+    height: 6vh;
   }
   .news .form2 button {
     width: 70vw;
-    height: 7vh;
-    color: #888888;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #fff;
-    border: solid 1px #707070;
-    position: absolute;
-    transform: translate(-50%, 100%);
-    bottom: 0%;
-    left: 50%;
-    transition: ease-in-out 300ms;
-  }
-  .news .form2 button:hover {
-    background-color: #707070;
-    color: #fff;
+    height: 6vh;
   }
 }
 
