--- a/style/style.css
+++ b/style/style.css
@@ -17,8 +17,8 @@ body .error {
   height: 30em;
   background-color: #707070;
   color: #fff;
-  -webkit-clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 65%);
-          clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 65%);
+  -webkit-clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 75%);
+          clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 75%);
 }
 .header .container {
   margin: 0 auto;
@@ -139,12 +139,23 @@ body .error {
   display: flex;
   flex-direction: row;
 }
-.algorithmHelp .container .form1 .selection .fem {
-  margin-left: 1vw;
+.algorithmHelp .container .form1 .selection .radio {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-.algorithmHelp .container .form1 .selection input {
+.algorithmHelp .container .form1 .selection .radio .masc, .algorithmHelp .container .form1 .selection .radio .fem {
+  margin-bottom: 0.5em;
+  margin-right: 10px;
   width: 14px;
-  margin-right: 1vw;
+}
+.algorithmHelp .container .form1 .selection .radio .fem {
+  margin-left: 40px;
+}
+.algorithmHelp .container .form1 .selection .radio .error {
+  margin-bottom: 0.5em;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 .algorithmHelp .container .form1 button {
   width: 25vw;
@@ -158,7 +169,7 @@ body .error {
   background-color: #707070;
   color: #fff;
 }
-@media (max-width: 1000px) {
+@media (max-width: 768px) {
   .algorithmHelp .container .help {
     width: auto;
     height: auto;
@@ -477,8 +488,8 @@ body .error {
   height: 20em;
   background-color: #707070;
   margin-top: 10em;
-  -webkit-clip-path: polygon(0% 10%, 100% 40%, 100% 100%, 0% 100%);
-          clip-path: polygon(0% 10%, 100% 40%, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0% 30%, 100% 0%, 100% 100%, 0% 100%);
+          clip-path: polygon(0% 30%, 100% 0%, 100% 100%, 0% 100%);
   text-align: center;
   position: absolute;
 }
