--- a/style/style.scss
+++ b/style/style.scss
@@ -23,7 +23,7 @@ body {
     height: 30em;
     background-color: $primary-color;
     color: #fff ;
-    clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 65%);
+    clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 75%);
     
     .container {
         margin: 0 auto;
@@ -94,10 +94,7 @@ body {
             }
         }
 
-    }
-    
-
-    
+    } 
 
     @media (max-width: 768px) {
 
@@ -187,16 +184,30 @@ body {
             .selection {
                 display: flex;
                 flex-direction: row;
-    
-                .fem {
-                    margin-left: 1vw;
+                
+                .radio {
+
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+
+                    .masc, .fem {
+                        margin-bottom: 0.5em;
+                        margin-right: 10px;
+                        width: 14px;
+                    }
+
+                    .fem {
+                        margin-left: 40px;
+                    }
+
+                    .error {
+                        margin-bottom: 0.5em;
+                        margin-right: 10px;
+                        margin-left: 10px;
+                    }
                 }
-    
-                input {
-                    width: 14px;
-                    margin-right: 1vw;
-                }
-    
+        
             }
     
             button {
@@ -216,7 +227,7 @@ body {
 
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 768px) {
 
         .container {
 
@@ -225,6 +236,8 @@ body {
                 height: auto;
                 padding: 0 2em;
                 margin-top: 22px;
+
+                
             }
 
             .form1 {
@@ -696,7 +709,7 @@ body {
     height: 20em;
     background-color: $primary-color;
     margin-top: 10em;
-    clip-path: polygon(0% 10%, 100% 40%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 30%, 100% 0%, 100% 100%, 0% 100%);
     text-align: center;
     position: absolute;
 
